# ezEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lldbinit  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json.template  CONTRIBUTING.md  CodingGuidelines.md  CppProperties.json  Generate.ps1  Generate.sh  GenerateWin64vs2019.bat  GenerateWin64vs2022.bat  InstallVcpkg.bat  LICENSE.md  License.txt  README.md  RunCMake.ps1  RunCMake.sh  cgmanifest.json  cmakeAndroid.bat  ezCMakeConfig.cmake  gitClean.txt  launch.vs.json  revision.txt  version.txt
Code/Editor/Editor/: CMakeLists.txt  Editor.cpp  Editor.rc  EditorPCH.cpp  EditorPCH.h  Main.cpp  resource.h
Code/Editor/EditorEngineProcess/: CMakeLists.txt  Editor.rc  EditorEngineProcess.cpp  EditorEngineProcessPCH.cpp  EditorEngineProcessPCH.h  EngineProcGameApp.cpp  EngineProcGameApp.h  EngineProcGameAppUWP.cpp  EngineProcGameAppUWP.h  Main.cpp
Code/Editor/EditorEngineProcessFramework/: CMakeLists.txt  EditorEngineProcessFrameworkDLL.h  EditorEngineProcessFrameworkPCH.cpp  EditorEngineProcessFrameworkPCH.h
Code/Editor/EditorEngineProcessFramework/EngineProcess/: EngineProcessApp.h  EngineProcessAppUWP.h  EngineProcessCommunicationChannel.cpp  EngineProcessCommunicationChannel.h  EngineProcessDocumentContext.h  EngineProcessMessages.h  EngineProcessViewContext.h  GuidHandleMap.h  RemoteViewContext.h  ViewRenderSettings.h  WorldRttiConverterContext.h
Code/Editor/EditorEngineProcessFramework/Gizmos/: GizmoComponent.h  GizmoHandle.h  GizmoRenderer.h
Code/Editor/EditorEngineProcessFramework/IPC/: IPCObjectMirrorEngine.cpp  IPCObjectMirrorEngine.h  ProcessCommunicationChannel.cpp  ProcessCommunicationChannel.h  (+2 more)
Code/Editor/EditorFramework/: CMakeLists.txt  EditorFrameworkDLL.h  EditorFrameworkPCH.cpp  EditorFrameworkPCH.h
Code/Editor/EditorProcessor/: CMakeLists.txt  EditorProcessor.cpp  EditorProcessorPCH.cpp  EditorProcessorPCH.h  Main.cpp
Code/Engine/Core/: Basics.h  CMakeLists.txt  CoreDLL.h  CoreInternal.h  CorePCH.cpp  PCH.cpp  PCH.h
Code/Engine/Foundation/: Basics.h  CMakeLists.txt  FoundationInternal.h  FoundationPCH.cpp  FoundationPCH.h  PCH.cpp  PCH.h  UserConfig.h  ezEngine.natvis  ezEngine.py  headerCheckerIgnore.json
Code/Engine/GameEngine/: Basics.h  CMakeLists.txt  Declarations.h  GameEngineDLL.h  GameEnginePCH.cpp  PCH.cpp  PCH.h  finalize.cmake
Code/Engine/ModelImporter/: CMakeLists.txt  Declarations.h  Handles.h  HierarchyObject.cpp  HierarchyObject.h  ImporterImplementation.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mesh.inl  ModelImporter.cpp  ModelImporter.h  ModelImporterDLL.h  ModelImporterPCH.cpp  Node.cpp  Node.h  PCH.cpp  PCH.h  Scene.cpp  Scene.h  VertexData.cpp  VertexData.h  VertexData.inl  VertexIndex.h
Code/Engine/PhysXCooking/: CMakeLists.txt  PCH.cpp  PhysXCooking.cpp  PhysXCooking.h  PhysXCookingPCH.cpp
Code/Engine/RendererDX11/: Basics.h  CMakeLists.txt  PCH.cpp  PCH.h  RendererDX11DLL.h  RendererDX11PCH.cpp  RendererDX11PCH.h
Code/Engine/RendererVulkan/: CMakeLists.txt  RendererVulkanDLL.h  RendererVulkanPCH.cpp  RendererVulkanPCH.h
Code/Engine/RendererWebGPU/: CMakeLists.txt  RendererWebGPUDLL.h  RendererWebGPUPCH.cpp  RendererWebGPUPCH.h
Code/Engine/ShaderCompilerDXC/: CMakeLists.txt  ShaderCompilerDXC.cpp  ShaderCompilerDXC.h  ShaderCompilerDXCDLL.h  SpirvMetaData.h  finalize.cmake  spirv_reflect.cpp  spirv_reflect.h
Code/Engine/System/: Basics.h  CMakeLists.txt  PCH.cpp  PCH.h  PlatformFeatures.h  SystemDLL.h  SystemPCH.cpp  SystemPCH.h
Code/Engine/TestFramework/: Basics.h  CMakeLists.txt  PCH.cpp  PCH.h  TestFrameworkPCH.cpp
Code/Engine/Texture/: CMakeLists.txt  Export.h  PCH.cpp  PCH.h  TextureDLL.h  TexturePCH.cpp  TexturePCH.h  cgmanifest.json
Code/EnginePlugins/DLangPlugin/: CMakeLists.txt  DLangPluginDLL.h  DLangPluginPCH.cpp  DLangPluginPCH.h  finalize.cmake
Code/EnginePlugins/KrautPlugin/: CMakeLists.txt  Kraut.ezPluginBundle  KrautDeclarations.h  KrautPluginDLL.h  KrautPluginPCH.cpp  finalize.cmake  init.cmake
Code/EnginePlugins/OpenXRPlugin/: Basics.h  CMakeLists.txt  OpenXR.ezPluginBundle  OpenXRDeclarations.h  OpenXRHandTracking.cpp  OpenXRHandTracking.h  OpenXRIncludes.h  OpenXRInputDevice.cpp  OpenXRInputDevice.h  OpenXRPluginPCH.cpp  OpenXRPluginPCH.h  OpenXRRemoting.cpp  OpenXRRemoting.h  OpenXRSingleton.cpp  OpenXRSingleton.h  OpenXRSpatialAnchors.cpp  OpenXRSpatialAnchors.h  OpenXRStartup.cpp  OpenXRSwapChain.cpp  OpenXRSwapChain.h  finalize.cmake  init.cmake  packages.config
Code/EnginePlugins/PhysXCooking/: CMakeLists.txt  PhysXCooking.cpp  PhysXCooking.h  PhysXCookingDLL.h  PhysXCookingPCH.cpp
Code/EnginePlugins/RecastPlugin/: CMakeLists.txt  Recast.ezPluginBundle  RecastInterface.h  RecastPluginDLL.h  RecastPluginPCH.cpp  Startup.cpp  finalize.cmake
Code/EnginePlugins/RenderDocPlugin/: CMakeLists.txt  RenderDoc.ezPluginBundle  RenderDocPluginDLL.h  RenderDocPluginPCH.cpp  RenderDocPluginPCH.h  RenderDocSingleton.cpp  RenderDocSingleton.h  finalize.cmake  init.cmake
Code/EnginePlugins/RmlUiPlugin/: CMakeLists.txt  RmlUi.cpp  RmlUi.ezPluginBundle  RmlUi.h  RmlUiContext.h  RmlUiConversionUtils.h  RmlUiDataBinding.h  RmlUiPluginDLL.h  RmlUiPluginPCH.cpp  RmlUiSingleton.cpp  RmlUiSingleton.h  Startup.cpp  finalize.cmake  init.cmake
Code/EnginePlugins/UltralightPlugin/: Basics.h  CMakeLists.txt  CopyUltralightDlls.cmake  PCH.cpp  PCH.h  UltralightStartup.cpp  finalize.cmake  init.cmake
Code/EnginePlugins/XBoxControllerPlugin/: CMakeLists.txt  InputDeviceXBox.cpp  InputDeviceXBox.h  Startup.cpp  XBoxController.ezPluginBundle  XBoxControllerDLL.h  finalize.cmake
Code/Plugins/FmodPlugin/: Basics.h  CMakeLists.txt  CopyFModDlls.cmake  FmodPluginPCH.cpp  FmodSingleton.cpp  FmodSingleton.h  FmodStartup.cpp  PCH.cpp
Code/Plugins/KrautPlugin/: Basics.h  CMakeLists.txt  KrautDeclarations.h  KrautPluginDLL.h  KrautPluginPCH.cpp  PCH.h
Code/Plugins/OpenVRPlugin/: CMakeLists.txt  OpenVRPluginPCH.h  OpenVRSingleton.cpp  OpenVRSingleton.h  OpenVRStartup.cpp  PCH.cpp
(+13296 files in other folders)
